# everyday-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_mcp.py
examples/: __init__.py
src/everyday_agents/: __init__.py
src/workflows/tailored-learning/: tailored-learning-workflow.py  tailored_learning_workflow.py
src/workflows/tailored-learning/agent/: get_learning_agent.py  tailored_lesson_agent.py
src/workflows/tailored-learning/agent/prompts/: __init__.py
src/workflows/tailored_learning/: tailored_learning_workflow.py
src/workflows/tailored_learning/agent/: __init__.py  get_learning_agent.py
src/workflows/tailored_learning/agent/mcp_servers/: mcp_registry.py  notion_mcp.py
src/workflows/tailored_learning/agent/prompts/: system_prompt.py
src/workflows/tailored_learning/agent/tools/: __init__.py  create_pdf.py  send_pdf_to_kindle.py
