[project]
name = "everyday-agents"
version = "0.1.0"
description = "Simple agentic workflows for automation of everyday tasks"
readme = "README.md"
authors = [
    { name = "Simon", email = "coelhosimon@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.107.2",
    "openai-agents>=0.3.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
everyday-agents = "everyday_agents:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
